# pico-sorcerer-2

./: .gitignore  CMakeLists.txt  PicoCharScreen.cpp  PicoCharScreen.h  PicoPen.h  PicoRect.h  PicoRectXYWH.h  PicoRectXYXY.cpp  PicoRectXYXY.h  PicoSubWin.cpp  PicoSubWin.h  PicoWin.cpp  PicoWin.h  PicoWinHidKeyboard.cpp  PicoWinHidKeyboard.h  README.md  Sorcerer2.cpp  Sorcerer2.h  Sorcerer2Disk.h  Sorcerer2DiskConsts.h  Sorcerer2DiskDrive.cpp  Sorcerer2DiskDrive.h  Sorcerer2DiskFatFsSpi.cpp  Sorcerer2DiskFatFsSpi.h  Sorcerer2DiskSystem.cpp  Sorcerer2DiskSystem.h  Sorcerer2HidKeyboard.cpp  Sorcerer2HidKeyboard.h  Sorcerer2Input.cpp  Sorcerer2Input.h  Sorcerer2Keyboard.h  Sorcerer2Output.cpp  Sorcerer2Output.h  Sorcerer2SdCardFatFsSpi.cpp  Sorcerer2SdCardFatFsSpi.h  Sorcerer2TapeSystem.cpp  Sorcerer2TapeSystem.h  Sorcerer2TapeSystemStatus.cpp  Sorcerer2TapeSystemStatus.h  Sorcerer2TapeUnit.h  (+11 more)
docs/: Sorcerer2BreadboardHdmi.md  Sorcerer2PicoDv.md  Sorcerer2PicomputerVga.md  Sorcerer2PwmAudioVga1111Ps2.md  pi_pico_sorcerer2_pwm_audio_filter.cddx
sdcard/disks/: disk1.dsk  disk2.dsk  disk3.dsk  disk4.dsk
sdcard/sorcerer2/disks/: diskA.dsk  diskB.dsk  diskC.dsk  diskD.dsk
sdcard/sorcerer2/rompacs/: Basic Mod 1.01 (1980).ROM  Basic Revision B.ROM  Exidy Standard Basic Ver 1.0 (1978).ROM  Exidy Word Processor Pac (1979).ROM  Exidy Z80 Development Pac (1979).ROM
sdcard/sorcerer2/tapes/: dstar.tape
src/: CMakeLists.txt  FatFsSpiDirReader.cpp  FatFsSpiDirReader.h  MagneticFont.h  PicoCharRenderer.cpp  PicoCharRenderer.h  PicoCharScreen.cpp  PicoCharScreen.h  PicoClippedScreen.cpp  PicoClippedScreen.h  PicoDisplay.cpp  PicoDisplay.h  PicoFontCushion.h  PicoFontEnvious.h  PicoFontMagnetic.h  PicoFontYouSquared.h  PicoMenu.cpp  PicoMenu.h  PicoOption.cpp  PicoOption.h  PicoOptionText.cpp  PicoOptionText.h  PicoPen.cpp  PicoPen.h  PicoQuickKey.cpp  PicoQuickKey.h  PicoQuickKeyAscii.cpp  PicoQuickKeyAscii.h  PicoRectXYWH.cpp  PicoRectXYWH.h  PicoRectXYXY.cpp  PicoRectXYXY.h  PicoSelect.cpp  PicoSelect.h  PicoSelectFile.cpp  PicoSelectFile.h  PicoTextField.cpp  PicoTextField.h  PicoWin.cpp  PicoWin.h  (+52 more)
src/breadboard_hdmi/: CMakeLists.txt  main.cpp
src/demo_dv/: CMakeLists.txt  main.cpp
src/picomputer/: CMakeLists.txt
src/picomputer/picomputer_vga/: CMakeLists.txt  main.cpp
uf2/: sorcerer2_demo_dv.uf2  sorcerer2_demo_dv_hdmi_audio.uf2  sorcerer2_demo_dv_i2s_audio.uf2  sorcerer2_hdmi.uf2  sorcerer2_hdmi_hdmi_audio.uf2  sorcerer2_hdmi_pwm_audio.uf2  sorcerer2_picomputer_vga_1111.uf2  sorcerer2_picomputer_vga_1111_ps2.uf2  sorcerer2_picomputer_vga_222.uf2  sorcerer2_picomputer_vga_332.uf2  sorcerer2_pimoroni_vga_demo.uf2
